<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExampleJNI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="salary">Salary</string>
    <string name="set">Set</string>
    <string name="get">Get</string>
    <string name="delete">Delete</string>
    <string name="getAll">Get All</string>
    <string name="backup">Backup</string>

</resources>